# Mercy

./: .gitignore  .gitmodules  CMakeLists.txt  lq_test.cpp  main.cpp
src/: Game.cpp  Game.h
